[tool.poetry]
name = "fame"
version = "1.3.0"
description = "Fame - Function for Azure Monitoring Extension"
authors = ["Claranet <do-not-reply@claranet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azure-data-tables = "~12.0.0b7"
azure-functions = "~1.7.0"
azure-identity = "~1.5.0"
azure-loganalytics = "~0.1.0"
python-dateutil = "~2.8.1"
requests = "^2.25.1"
signalfx = "~1.1.13"
# enforced previous dependencies
cryptography = "~42.0.8"
cffi = "~1.16.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
pyright = "^1.1.335"
pytest = "^8.1.1"
tox = "^4.14.2"

[tool.poetry.scripts]
fame = 'fame.main:main'

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
