[tool.poetry]
name = "fame"
version = "0.1.0"
description = "Fame - Function for Azure Monitoring Extension"
authors = ["Claranet <do-not-reply@claranet.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
azure-data-tables = "^12.7.0"
azure-functions = "^1.23.0"
azure-identity = "^1.23.0"
azure-loganalytics = "^0.1.1"
cffi = "^1.17.1"
cryptography = "^45.0.3"
datadog =  "^0.51.0"
python-dateutil = "^2.9.0"
requests = "^2.32.3"
signalfx = "^1.1.16"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pyright = "^1.1.335"
pytest = "^8.4.0"
tox = "^4.26.0"

[tool.poetry.scripts]
fame = 'fame.main:main'

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
